--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "o1js": "^0.13.0"
+    "o1js": "^0.13.0",
+    "fs-extra": "^11.1.1",
+    "find-npm-prefix": "^1.0.2"
   }
 }
