--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "proof_of_events",
-  "version": "0.1.0",
+  "name": "wrdhom",
+  "version": "0.1.1",
   "description": "",
   "author": "",
   "license": "MIT",
