Change structure of project and export some components separately so they can be used on the browser, without importing components that only work on a NodeJS environment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wrdhom",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "",
   "author": "",
   "license": "MIT",
@@ -12,6 +12,7 @@
   ],
   "type": "module",
   "main": "build/src/index.js",
+  "browser": "build/src/index.client.js",
   "types": "build/src/index.d.ts",
   "scripts": {
     "build": "tsc",
