--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wrdhom",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "",
   "author": "",
   "license": "MIT",
@@ -17,11 +17,11 @@
   "scripts": {
     "build": "tsc",
     "buildw": "tsc --watch",
-    "coverage": "node --experimental-vm-modules --experimental-wasm-threads node_modules/jest/bin/jest.js --coverage",
+    "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "format": "prettier --write --ignore-unknown **/*",
-    "prepare": "husky install",
-    "test": "node --max-old-space-size=8888 --experimental-vm-modules --experimental-wasm-threads node_modules/jest/bin/jest.js",
-    "testw": "node --experimental-vm-modules --experimental-wasm-threads node_modules/jest/bin/jest.js --watch",
+    "prepare": "husky",
+    "test": "node --max-old-space-size=8888 --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "testw": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "npx eslint src/* --fix"
   },
   "lint-staged": {
@@ -31,23 +31,23 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.7.0",
-    "eslint-plugin-snarkyjs": "^0.1.0",
-    "husky": "^7.0.1",
-    "jest": "^27.3.1",
-    "lint-staged": "^11.0.1",
-    "prettier": "^2.3.2",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.7.2"
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-o1js": "^0.4.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.5.2"
   },
   "dependencies": {
-    "o1js": "^1.1.0",
-    "fs-extra": "^11.1.1",
-    "find-npm-prefix": "^1.0.2"
+    "o1js": "^1.4.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
