--- a/package.json
+++ b/package.json
@@ -19,16 +19,9 @@
     "buildw": "tsc --watch",
     "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "format": "prettier --write --ignore-unknown **/*",
-    "prepare": "husky",
     "test": "node --max-old-space-size=8888 --experimental-vm-modules node_modules/jest/bin/jest.js",
     "testw": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "npx eslint src/* --fix"
-  },
-  "lint-staged": {
-    "**/*": [
-      "eslint src/* --fix",
-      "prettier --write --ignore-unknown"
-    ]
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
@@ -38,13 +31,12 @@
     "@typescript-eslint/parser": "^7.14.1",
     "eslint": "^8.57.0",
     "eslint-plugin-o1js": "^0.4.0",
-    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.2"
   },
-  "dependencies": {
+  "peerDependencies": {
     "o1js": "^1.4.0"
   },
   "engines": {
